<resources>
  <string name="app_name">Jotta</string>
  <string name="settings">Settings</string>
  <string name="my_note">My note</string>
  <string name="recycle_bin">Recycle Bin</string>
  <string name="new_folder">New folder</string>
  <string name="cancel">Cancel</string>
  <string name="change_theme">Select themes</string>
  <string name="close">Close</string>
  <string name="txt_size">Text size</string>
  <string name="txt_style">Text style</string>
  <string name="rate_app">Rate this app</string>
  <string name="normal">Normal</string>
  <string name="italic">Italic</string>
  <string name="bold">Bold</string>
  <string name="check_box">Checkboxes</string>
  <string name="delete">Delete</string>
  <string name="share_note">Share note</string>
  <string name="title">Title</string>
  <string name="note">Note</string>
  <string name="move_to">Move to</string>
  <string name="copy">Copy</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="my_notes">My notes</string>
  <string name="edit_reminder">Edit reminder</string>
  <string name="alarm">Add reminder</string>

  <string name="add_reminder">Reminder</string>
  <string name="details">Details</string>
  <string name="date">Date</string>
  <string name="time">Time</string>
  <string name="repeat">Repeat</string>
  <string name="repeat_off">Off</string>
  <string name="repeat_no">Repetition Interval </string>
  <string name="repeat_type">Type of Repetitions</string>

  <string name="action_discard_reminder">Discard Reminder</string>
  <string name="action_save_reminder">Save Reminder</string>
  <string name="save">Save</string>
  <string name="noteaction_sketch_toolbartitle">Sketch</string>
  <string name="sketch">Sketch</string>
  <string name="redo">Redo</string>
  <string name="colors">Colors</string>
  <string name="stroke">Stroke</string>
  <string name="eraser">Eraser</string>
  <string name="undo">Undo</string>
  <string name="stroke_size">stroke size</string>
  <string name="saturation">Saturation</string>
  <string name="opacity">Opacity</string>

  <string name="erase_sketch">Erase sketch?</string>
  <string name="delete_note_confirmation">Confirm note deletion?</string>
  <string name="confirm">Confirm</string>
  <string name="edit">Edit</string>
  <string name="share_sketch">Share sketch</string>
  <string name="back_up">Back up</string>
  <string name="restore">Restore</string>

  <string-array name="attachments_actions">
    <item>Share</item>
    <item>Delete</item>
    <item>Edit</item>
  </string-array>

  <string-array name="attachments_actions_values">
    <item>share</item>
    <item>delete</item>
    <item>delete all</item>
    <item>edit</item>
  </string-array>



  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="hint_confirm_password">Confirm password</string>
  <string name="hint_name">Fullname</string>
  <string name="btn_login">LOGIN</string>
  <string name="btn_link_to_register_doctor">Not a member? Get registered as Doctor now!</string>
  <string name="btn_link_to_login">Already registered. Login Me!</string>
  <string name="title_activity_reset_password">ResetPasswordActivity</string>
  <string name="btn_forgot_password">Forgot your password?</string>
  <string name="btn_reset_password">Reset Password</string>
  <string name="btn_back"><![CDATA[<< Back]]></string>
  <string name="hint_new_email">New Email</string>
  <string name="btn_change">Change</string>
  <string name="btn_send">Send</string>
  <string name="btn_remove">Remove</string>
  <string name="btn_sign_out">Sign Out</string>
  <string name="lbl_forgot_password">Forgot password?</string>
  <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

  <string name="facebook_app_id">170207037149115</string>
  <string name="fb_login_protocol_scheme">fb170207037149115</string>

  <string name="home">Home</string>
  <string name="radio_favourite">FAVOURITES</string>
  <string name="radio_favourite_small">Favourite</string>
  <string name="logout">Log Out</string>
  <string name="playing_radio_title">Playing Radio</string>
  <string name="night_mode">Night mode</string>
  <string name="radio">Radio</string>
  <string name="radio_tab">My station</string>
  <string name="facebook">Facebook</string>
  <string name="phone">Phone</string>

  <string name="email"><font size="19">Email</font></string>
  <string name="username"><font size="19">Username</font></string>
  <string name="password"><font size="19">Password</font></string>
  <string name="forget_password">Forget password?</string>
  <string name="login">Log in</string>
  <string name="create_account">Create account</string>
  <string name="connect_with">Or connect with</string>
  <string name="or">OR</string>
  <string name="skip">Skip Registration</string>
  <string name="action_sign_in_short">Sign Up</string>
  <string name="auth_failed">Sign up fail</string>
  <string name="reset_failed">Rest password failed</string>
  <string name="minimum_password">Password must be minimum of 6 letter</string>
  <string name="register">Register</string>

</resources>
