<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:background="@color/white"
  android:paddingRight="@dimen/list_item_image_padding"
  android:paddingLeft="@dimen/list_item_image_padding"
  android:layout_height="wrap_content">

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/edit_sketch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/black"
    android:text="@string/edit"
    android:background="@drawable/common_selector"/>

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/share_sketch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/share_sketch"
    android:background="@drawable/common_selector"/>
  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/delete_sketch"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/delete"
    android:background="@drawable/common_selector"/>


</LinearLayout>