<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="center"
  android:background="@mipmap/ic_login_back"
  android:fitsSystemWindows="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/default_padding"
    android:paddingRight="@dimen/default_padding"
    android:orientation="vertical">


    <android.support.v7.widget.AppCompatImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_gravity="center_horizontal"
      android:src="@mipmap/ic_header"/>

    <android.support.v7.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:textColor="@color/white"
      android:layout_gravity="center_horizontal"
      android:text="@string/lbl_forgot_password"
      android:textSize="20sp"/>

    <android.support.v7.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:gravity="center_horizontal"
      android:text="@string/forgot_password_msg"
      android:textColor="@android:color/white"
      android:textSize="16sp"/>
    <android.support.design.widget.TextInputLayout
      android:id="@+id/etUsernameLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:textColor="@color/white"
      android:theme="@style/EditTextHint">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/doc_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    </android.support.design.widget.TextInputLayout>


    <!-- Login Button -->

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/btn_doc_reset_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dip"
      android:layout_gravity="center"
      android:background="@color/btn_submit_color"
      android:text="@string/btn_reset_password"
      android:textColor="@android:color/white"/>

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/btn_back_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:background="@null"
      android:text="@string/btn_back"
      android:textColor="@color/white"
      android:visibility="gone"/>

  </LinearLayout>

  <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginBottom="20dp"
    android:layout_gravity="center|bottom"
    android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>