<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@mipmap/ic_login_back"
 >

  <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginBottom="20dp"
    android:layout_gravity="center|bottom"
    android:visibility="gone"/>
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingLeft="@dimen/default_padding"
      android:paddingRight="@dimen/default_padding"
      android:orientation="vertical"
      >
      <ImageView
        android:id="@+id/back_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_arrow_back_white_24dp"/>

      <ImageView
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_header"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:text="@string/email"/>
      <android.support.v7.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_gray_new"
        android:textColor="@color/white"
       />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:text="@string/password"/>

      <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_gray_new"
        android:textColorHint="@color/white"
        android:inputType="textPassword"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:text="@string/hint_confirm_password"/>
      <android.support.design.widget.TextInputEditText
        android:id="@+id/retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_gray_new"
        android:inputType="textPassword"/>
      <Button
        android:id="@+id/sign_up_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@color/btn_create_color"
        android:text="@string/action_sign_in_short"
        android:textColor="@android:color/white"
        android:textSize="24sp"/>

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone"/>

      <!-- Link to Login Screen -->

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:visibility="gone"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    </LinearLayout>
  </ScrollView>


</android.support.design.widget.CoordinatorLayout>

