<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_half"
    android:paddingLeft="6dp">

    <com.neopixl.pixlui.components.edittext.EditText
      android:id="@+id/note_edit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="15dp"
      android:background="@null"
      android:hint="@string/note"
      android:inputType="textCapSentences|textMultiLine"
      android:linksClickable="false"
      android:textAppearance="@style/Text.Big"
      android:textColorHint="@color/text_color_lighter"
      android:textColor="@color/text_color"
      android:imeOptions="actionDone"
      pixlui:typeface="fonts/RobotoSlab-Regular.ttf"
      android:textCursorDrawable="@null"/>
  </LinearLayout>

  <LinearLayout
    android:id="@+id/ln_alarm"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="5dp"
    android:background="@drawable/icon_selector"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingStart="@dimen/padding_half"
    android:paddingLeft="@dimen/padding_half"
    android:gravity="center_vertical">

    <ImageView
      android:id="@+id/reminder_icon"
      android:layout_height="20dp"
      android:layout_width="20dp"
      android:layout_marginEnd="5dp"
      android:layout_marginRight="5dp"
      android:src="@drawable/ic_access_time_black_24dp"
      android:contentDescription="@string/alarm"/>

    <com.neopixl.pixlui.components.textview.TextView
      android:id="@+id/text_alarm"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:freezesText="true"
      android:gravity="center_vertical"
      android:hint="@string/add_reminder"
      android:textAppearance="@style/Text.Small"
      android:textColorHint="@color/text_color_lighter"
      android:textColor="@color/text_color_lighter"
      pixlui:typeface="fonts/Roboto-Regular.ttf"/>
  </LinearLayout>


</LinearLayout>