<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.gideondev.jotta.feature.Settings.view.SettingsActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>/>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ln_text_size"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAppearance="@style/TextPrimary"
                android:text="@string/txt_size"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/text_size"
                android:textAppearance="@style/TextSecondary"
                android:text="@string/txt_size"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ln_text_style"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAppearance="@style/TextPrimary"
                android:text="@string/txt_style"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/text_style"
                android:textAppearance="@style/TextSecondary"
                android:text="@string/txt_size"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_rate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_border_black_24dp"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                android:textAppearance="@style/TextPrimary"
                android:text="@string/rate_app"/>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
